[package]
name = "rantools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "staticlib", "dylib"]

[dependencies]
resvg = "0.23.0"
tiny-skia = "0.6"
usvg = { version = "0.23.0", default-features = false } # à supprimer
base64 = "0.13.0"
pdf-writer = "0.6.0"
printpdf = "0.5.0"
miniz_oxide = "0.5"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
svg = "0.10.0"
roxmltree = "0.15.0"
nsvg = "0.5.1"